assets/scss/betterlinks.scss
/* ... */
.btl-disclosure-preview {
	background: linear-gradient(202deg, rgb(41, 97, 255) 0%, rgb(0, 59, 226) 100%);
	padding: 5px;
	font-size: 16px;
	border-radius: 2px;
	display: inline-block;
	color: white;

	.btl-backward-hand {
		font-size: 16px;
	}
}

.betterlinks-body .btl-tab-panel-inner .betterlinks-multi-input .btl-modal-select--full,
.betterlinks-body .btl-tab-panel-inner .betterlinks-input-select-fields .btl-modal-select--full {
	width: 100px !important;
	margin-left: 10px;
	align-self: flex-start;
}
.betterlinks-multi-input {
	display: flex;
	.betterlinks-single-input {
		display: flex;
		flex-direction: column;
		align-items: center;

		.btl-text-field {
			width: 60px !important;
			text-align: center;
		}
		span {
			font-size: 10px;
			font-style: italic;
		}
	}
}

.betterlinks_affiliate_disclosure_post {
	display: flex;
	flex-direction: column;
	line-height: 18px;
	margin: 0;
}
.betterlinks_affiliate_disclosure_post p {
	padding: 0;
	margin: 0;
	font-size: inherit;
}
.rmsc.multi-select {
	max-width: 150px;
	min-width: 150px;
}
.rmsc {
	* {
		transition: unset !important;
	}
	.dropdown-container {
		.dropdown-heading .clear-selected-button {
			display: none;
		}
	}
	.dropdown-content {
		position: absolute;
		z-index: 1;
		top: 100%;
		width: 100%;
		padding-top: 8px;

		.panel-content input[type='checkbox'] {
			overflow: hidden;
			border-radius: var(--rmsc-radius);
			background: var(--rmsc-bg);
			box-shadow: 0 0 0 1px #0000001a, 0 4px 11px #0000001a;
		}
	}
}

// // Search Icon Css Loader
.betterlinks-body {
	h1 {
		font-family: 'Dosis', sans-serif;
		padding-bottom: 10px;
		color: #333;
		text-align: center;
		padding-top: 10px;
	}
	.description {
		margin: 20px;
		font-size: 15px;
		display: block;
		text-align: center;
	}
	p {
		padding: 0px;
		margin: 4px;
	}

	.search-wrapper {
		position: relative;
		height: 32px;
		margin: 0 auto;
	}
	input.ajax-search {
		height: 30px;
		width: 100px;
		cursor: pointer;
		-webkit-font-smoothing: antialiased;
		-moz-osx-font-smoothing: grayscale;
		filter: grayscale(100%);
		color: rgba(0, 0, 0, 0.5);
	}
	.search {
		cursor: pointer;
		position: absolute;
		left: 50%;
		margin-left: -1em;
		padding: 10px 0;
		text-align: center;
		font-size: 12px;
	}

	input.ajax-search:after,
	input.ajax-search:before {
		content: 'what';
		position: absolute;
		top: 0;
		left: 50%;
		color: #000;
		text-indent: 0;
	}

	input.ajax-search:after,
	input.ajax-search:before,
	.search.loading .search__circle,
	.search.loading .search__rectangle {
		opacity: 1;
	}

	.search__circle,
	input.ajax-search:before {
		width: 0.8em;
		height: 0.8em;
		border: 1px solid #2673ff;
		border-radius: 50%;
		transition: 0.3s;
	}

	.search__rectangle,
	input.ajax-search:after {
		position: absolute;
		left: 9px;
		margin-top: -1px;
		width: 4px;
		-webkit-transform: rotate(45deg);
		transform: rotate(45deg);
		border: 1px solid #2673ff;
		border-radius: 100%;
	}

	@-webkit-keyframes load8 {
		0% {
			-webkit-transform: rotate(0deg);
			transform: rotate(0deg);
		}
		100% {
			-webkit-transform: rotate(360deg);
			transform: rotate(360deg);
		}
	}
	@keyframes load8 {
		0% {
			-webkit-transform: rotate(0deg);
			transform: rotate(0deg);
		}
		100% {
			-webkit-transform: rotate(360deg);
			transform: rotate(360deg);
		}
	}
}

.btl-form-field {
	div.btl-individual-config-blocks {
		max-width: 500px;
		min-width: 400px;
		width: 450px;
		> div {
			border-radius: 8px;
		}
		&.--btl-records-bg {
			color: #333;
			overflow-x: auto;
		}

		.btl-instruction-block-wrapper {
			background-color: rgb(246, 246, 246);
			color: rgb(123, 126, 152);
			padding: 15px;
			margin-bottom: 10px;
		}
		.btl-code-block-wrapper {
			padding: 20px 10px;
			margin-bottom: 10px;
			border: 1px solid rgba(217, 225, 244, 1);

			.btl-code-block {
				margin-top: 8px;

				> span.copy-btn {
					position: absolute;
					top: 5px;
					right: 5px;
					cursor: pointer;
				}
			}
		}

		code {
			display: block;
			min-height: 18px;
			padding: 8px 10px;
			border: 1px solid rgba(217, 225, 244, 1);
			border-radius: 8px;
			background-color: rgba(245, 245, 247, 1);
			font-weight: normal;
		}
	}
}

.btl-domain-configuration .btl-form-field {
	min-height: 230px;

	.server-type-wrapper {
		display: flex;
		flex-direction: column;

		.server-type-title {
			font-size: 14px;
			font-weight: 500;
		}
		.server-type {
			display: flex;
			align-items: center;
			padding: 10px 0;
			column-gap: 10px;

			label {
				cursor: pointer;
			}
		}
	}
}

